tests/integration/fail/arrays/elem_at_index_out_of_bounds.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::Other'
%elem_at% [true, false, true] 3